--- a/web/modules/header/header.css
+++ b/web/modules/header/header.css
@@ -84,7 +84,7 @@
 }
 
 #header .active {
-    background-color: #f1f1f1 !important;
+    background-color: #fff !important;
 }
 
 #header .navbar-brand {
