--- a/web/style/table-fixed.css
+++ b/web/style/table-fixed.css
@@ -2,7 +2,7 @@
   width: 97%;
 }
 .table-fixed tbody {
-  height: 230px;
+  /* height: 12cm; */
   overflow-y: auto;
   width: 100%;
 }
@@ -13,3 +13,4 @@
   float: left;
   border-bottom-width: 0;
 }
+
